# tsml-py

./: .codecov.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  sweep.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  doc_improvement.yml  feature_request.yml
.github/workflows/: cancel.yml  periodic_tests.yml  pr_precommit.yml  pr_pytest.yml  pre_commit.yml  precommit_autoupdate.yml  release.yml  tests.yml
build_tools/: analyze_github_actions.py  pr_labeler.py  pr_open_commenter.py
docs/: api.rst  conf.py  index.rst  installation.rst  user_guide.rst
tsml/: __init__.py  base.py
tsml/compose/: __init__.py  _channel_ensemble.py  _sklearn_to_tsml.py
tsml/compose/tests/: __init__.py  test_channel_ensemble.py
tsml/convolution_based/: __init__.py
tsml/datasets/: __init__.py  _data_io.py
tsml/datasets/EqualMinimalJapaneseVowels/: EqualMinimalJapaneseVowels_TEST.ts  EqualMinimalJapaneseVowels_TRAIN.ts
tsml/datasets/tests/: __init__.py  _expected_data_io_output.py  test_data_io.py
tsml/deep_learning/: __init__.py  base.py
tsml/dictionary_based/: __init__.py  _mrseql.py  _mrsqm.py
tsml/distance_based/: __init__.py  _grail.py  _mpdist.py  _pf.py
tsml/distances/: __init__.py  _manhattan.py  _utils.py
tsml/dummy/: __init__.py  _dummy.py
tsml/feature_based/: __init__.py  _catch22.py  _catch22_classifier.py  _fpca.py
tsml/hybrid/: __init__.py  _rist.py
tsml/interval_based/: __init__.py  _base.py  _cif.py  _interval_forest.py  _interval_pipelines.py  _rise.py  _stsf.py  _tsf.py
tsml/interval_based/tests/: test_interval_forest.py  test_interval_pipelines.py
tsml/package/: __init__.py  example.py
tsml/package/tests/: test_example.py
tsml/shapelet_based/: __init__.py  _mrsqm.py  _rdst.py  _rsf.py  _stc.py
tsml/sklearn/: __init__.py  _cit.py  _rotation_forest.py
tsml/sklearn/tests/: __init__.py  test_rotation_forest.py
tsml/tests/: __init__.py  _estimator_checks.py  _sklearn_checks.py  estimator_checks.py  test_all_estimators.py  test_estimator_checks.py  test_estimators_sklearn.py  test_interface.py  test_sklearn_compatability.py
tsml/transformations/: __init__.py  _acf.py  _ar_coefficient.py  _catch22.py  _fpca.py  _function_transformer.py  _interval_extraction.py  _periodogram.py  _quantile.py  _sfa.py  _shapelet_transform.py  _summary_features.py  _transform_concatenator.py  catch22.py  catch22wrapper.py  interval_extraction.py  random_intervals.py  shapelet_transform.py  summary_features.py  supervised_intervals.py  test_shapelet_transform.py
tsml/transformations/tests/: __init__.py  test_catch22.py  test_function_transformer.py  test_interval_extraction.py  test_intervals.py  test_periodogram.py  test_shapelet_transform.py  test_transform_concatenator.py
tsml/utils/: __init__.py  _tags.py  discovery.py  testing.py  validation.py
tsml/utils/numba/: general.py  stats.py
tsml/utils/numba/tests/: test_general.py
tsml/utils/numba_functions/: __init__.py  general.py  stats.py
tsml/utils/tests/: test_discovery.py
tsml/vector/: __init__.py  _cit.py  _rotation_forest.py
tsml/vector/tests/: __init__.py  test_rotation_forest.py
tsml_subpackage_template/: __init__.py
tsml_subpackage_template/package/tests/: test_example.py
