[build-system]
requires = ["setuptools>=61", "wheel", "toml", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "tsml"
version = "0.2.1"
description = "A toolkit for time series machine learning algorithms."
authors = [
    {name = "Matthew Middlehurst", email = "m.middlehurst@uea.ac.uk"},
    {name = "Tony Bagnall", email = "ajb@uea.ac.uk"},
]
readme = "README.md"
requires-python = ">=3.8,<3.12"
keywords = [
    "data-science",
    "machine-learning",
    "scikit-learn",
    "time-series",
    "time-series-classification",
    "time-series-regression",
    "time-series-clustering",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numba>=0.55.0,<0.58.0",
    "numpy>=1.21.0,<1.25.0",
    "pandas>=1.5.3,<2.1.0",
    "scikit-learn>=1.0.0,<1.3.0",
    "packaging>=20.0,<24.0",
]

[project.optional-dependencies]
extras = [
    "pyfftw>=0.12.0,<0.14.0",
    "statsmodels>=0.12.1,<0.14.0",
    "wildboar>=1.1.0,<1.2.0",
    "scikit-fda>=0.7.0,<0.9.0 ; python_version <= '3.10'",
    "stumpy>=1.6.0,<1.12.0"
]
unstable_extras = [
    "mrsqm>=0.0.1,<0.1.0 ; platform_system == 'Darwin'",  # requires gcc and fftw to be installed for Windows and some other OS (see http://www.fftw.org/index.html)
    "pycatch22>=0.4.2,<0.5.0",  # Known to fail installation on some setups
]
dev = [
    "pre-commit",
    "pytest",
    "pytest-randomly",
    "pytest-timeout",
    "pytest-xdist",
    "pytest-cov",
]
binder = [
    "notebook",
    "jupyterlab",
]
docs = [
    "sphinx",
    "sphinx-design",
    "nbsphinx",
    "numpydoc",
    "jupyter",
    "furo",
    "sphinx_issues",
    "myst-parser",
    "sphinx-copybutton",
]

[project.urls]
homepage = "https://www.timeseriesclassification.com/"
repository = "https://github.com/time-series-machine-learning/tsml-py/"

[project.license]
file = "LICENSE"

[tool.setuptools.packages.find]
include = ["tsml"]

[tool.check-manifest]
ignore = [
    "examples/**",
    "docs/**",
    "*.yaml",
    "*.yml",
    ".coveragerc",
]

[tool.pytest.ini_options]
testpaths = "tsml"
addopts = '''
    --durations 20
    --timeout 600
    --showlocals
    --doctest-modules
    --numprocesses auto
'''
