[build-system]
requires = ["setuptools>=61", "wheel", "toml", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "tsml"
version = "0.3.0"
description = "A toolkit for time series machine learning algorithms."
authors = [
    {name = "Matthew Middlehurst", email = "m.b.middlehurst@soton.ac.uk"},
]
maintainers = [
    {name = "Matthew Middlehurst", email = "m.b.middlehurst@soton.ac.uk"},
]
readme = "README.md"
requires-python = ">=3.8,<3.12"
keywords = [
    "data-science",
    "machine-learning",
    "scikit-learn",
    "time-series",
    "time-series-classification",
    "time-series-regression",
    "time-series-clustering",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numba>=0.55.0",
    "numpy>=1.21.0",
    "pandas>=1.5.3",
    "scikit-learn>=1.0.0",
    "packaging>=20.0",
]

[project.optional-dependencies]
all_extras = [
    "pyfftw>=0.12.0",
    "statsmodels>=0.12.1",
    "wildboar>=1.1.0",
    "scikit-fda>=0.7.0",
    "stumpy>=1.6.0",
    "grailts",
    # temp
    "fdasrsf<=2.5.6",  # currently above this breaks on some OS
]
unstable_extras = [
    "mrsqm>=0.0.1 ; platform_system == 'Darwin'",  # requires gcc and fftw to be installed for Windows and some other OS (see http://www.fftw.org/index.html)
    "pycatch22<=0.4.4",  # Known to fail installation on some setups
]
dev = [
    "pre-commit",
    "pytest",
    "pytest-randomly",
    "pytest-timeout",
    "pytest-xdist",
    "pytest-cov",
    "pytest-rerunfailures",
]
binder = [
    "notebook",
    "jupyterlab",
]
docs = [
    "sphinx<8.0.0",
    "sphinx-design",
    "sphinx-version-warning",
    "sphinx_issues",
    "sphinx-copybutton",
    "sphinx-remove-toctrees",
    "sphinxext-opengraph",
    "nbsphinx",
    "numpydoc",
    "myst-parser",
    "jupyter",
    "furo",
]

[project.urls]
homepage = "https://www.timeseriesclassification.com/"
repository = "https://github.com/time-series-machine-learning/tsml-py/"

[project.license]
file = "LICENSE"

[tool.setuptools.packages.find]
include = ["tsml"]

[tool.check-manifest]
ignore = [
    # Ignore virtual environments in local builds
    "venv/**",
    # Ignore local files
    "local/**",
]

[tool.pytest.ini_options]
testpaths = "tsml"
addopts = '''
    --durations 20
    --timeout 600
    --showlocals
    --doctest-modules
    --numprocesses auto
    --reruns 2
'''
