[build-system]
requires = ["setuptools>=61", "wheel", "toml", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "tsml"
version = "0.6.0"
description = "A development sandbox for time series machine learning algorithms."
authors = [
    {name = "Matthew Middlehurst", email = "m.b.middlehurst@soton.ac.uk"},
]
maintainers = [
    {name = "Matthew Middlehurst", email = "m.b.middlehurst@soton.ac.uk"},
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
keywords = [
    "data-science",
    "machine-learning",
    "scikit-learn",
    "time-series",
    "time-series-classification",
    "time-series-regression",
    "time-series-clustering",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numba>=0.55.0",
    "numpy>=1.21.0",
    "scipy>=1.9.0",
    "pandas>=1.5.3",
    "scikit-learn>=1.0.0",
    "packaging>=20.0",
]

[project.optional-dependencies]
all_extras = [
    "grailts",
    # "scikit-fda>=0.7.0",
    "wildboar",
]
unstable_extras = [
    "mrsqm>=0.0.7; platform_system == 'Linux' and python_version < '3.12'",  # requires gcc and fftw to be installed for Windows and some other OS (see http://www.fftw.org/index.html)
    "mrseql>=0.0.4,<0.1.0; platform_system == 'Linux' and python_version < '3.12'",  # requires gcc and fftw to be installed for Windows and some other OS (see http://www.fftw.org/index.html)
]
dev = [
    "pre-commit",
    "pytest",
    "pytest-randomly",
    "pytest-timeout",
    "pytest-xdist[psutil]",
    "pytest-cov",
    "pytest-rerunfailures",
]


[project.urls]
homepage = "https://www.timeseriesclassification.com/"
repository = "https://github.com/time-series-machine-learning/tsml-py/"

[project.license]
file = "LICENSE"

[tool.setuptools.packages.find]
include = ["tsml"]

[tool.check-manifest]
ignore = [
    # Ignore virtual environments in local builds
    "venv/**",
    # Ignore local files
    "local/**",
]

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
testpaths = "tsml"
addopts = '''
    --doctest-modules
    --durations 20
    --timeout 600
    --showlocals
    --dist worksteal
    --reruns 2
    --only-rerun "crashed while running"
'''
